	* Cleanup #16009: Refactor sprite icon API, to have more elementary functions instead of big ones (Thanks to Steffen Ritter)
	* Added feature #15966: Adds mode to debug the backend ($TYPO3_CONF_VARS['BE']['debug']) (Thanks to Steffen Kamper)
	* Fixed bug #16016: Scheduler: Since new CSH handling (#15990), no icon in scheduler works anymore

2010-10-16  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14396: Warn when KEEP_FILE is set
	* Fixed bug #15789: Improve ExtJS skin: Grids

2010-10-15  Oliver Hader  <oliver@typo3.org>

	* Added feature #15988: Refactor TCA definitions of table pages

2010-10-15  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15942: locallangXMLOverride should not distinguish between paths ending with php and xml (Thanks to Andreas Kiessling)

2010-10-15  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #16005: Live workspace does not respect move-to-placeholders
	* Fixed bug #11444: Workspace Dropdown in "Workspace" -> "Review and Publish" [LIVE workspace] always shows "[Draft Workspace]" (Thanks to Robert Heel)
	* Added feature #15990: Introduce a new CSH API function and make use of it in TCEforms
	* Added feature #15989: Create a new abstract class t3lib_message_abstractmessage

2010-10-15 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15543: Bugfix: PHP Warning in t3lib_spritemanager (Thanks to Sven Juergens)
	* Fixed bug #15928: Replace the current if-construct of stdWrap with real functions and make each of them stdWrap awaret (Thanks to Jo Hasenau)
	* Fixed bug #15662: Bug: SpriteGeneration generates wrong output if there are several icons sizes which are same width and nearly same count (Thanks to Steffen Ritter)
	* Fixed bug #15822: t3lib_beFunc use $this in static methods
	* Fixed bug #15992: Bugfix: Incorrect default value of permalogin
	* Fixed bug #15993: Bug: Felogin shouldn't show the permalogin form controls when permalogin is set to "forced on" in install tool
