@@ -25,6 +25,7 @@
 	* Cleanup #16009: Refactor sprite icon API, to have more elementary functions instead of big ones (Thanks to Steffen Ritter)
 	* Added feature #15966: Adds mode to debug the backend ($TYPO3_CONF_VARS['BE']['debug']) (Thanks to Steffen Kamper)
 	* Fixed bug #16016: Scheduler: Since new CSH handling (#15990), no icon in scheduler works anymore
+	* Cleanup #16002: Refactoring of t3lib_spritemanager_SimpleHandler (Thanks to Steffen Ritter)
 
 2010-10-16  Steffen Kamper  <steffen@typo3.org>
 
